--- a/index.html
+++ b/index.html
@@ -19,13 +19,19 @@
     <script src="./module-01/task-05.js" type="module"></script>
     <script src="./module-01/task-06.js" type="module"></script> -->
 
-    <script src="./module-02/task-01.js" type="module"></script>
+    <!-- <script src="./module-02/task-01.js" type="module"></script>
     <script src="./module-02/task-02.js" type="module"></script>
     <script src="./module-02/task-03.js" type="module"></script>
     <script src="./module-02/task-04.js" type="module"></script>
     <script src="./module-02/task-05.js" type="module"></script>
-    <script src="./module-02/task-06.js" type="module"></script>
+    <script src="./module-02/task-06.js" type="module"></script> -->
 
+    <script src="./module-03/task-01.js" type="module"></script>
+    <script src="./module-03/task-02.js" type="module"></script>
+    <script src="./module-03/task-03.js" type="module"></script>
+    <script src="./module-03/task-04.js" type="module"></script>
+    <script src="./module-03/task-05.js" type="module"></script>
+    <script src="./module-03/task-06.js" type="module"></script>
 </body>
 
 </html>
