made module-05 hw

--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@
     <script src="./module-03/task-05.js" type="module"></script>
     <script src="./module-03/task-06.js" type="module"></script> -->
 
-    <script src="./module-04/task-01.js" type="module"></script>
-    <script src="./module-04/task-02.js" type="module"></script>
+    <!-- <script src="./module-04/task-01.js" type="module"></script>
+    <script src="./module-04/task-02.js" type="module"></script> -->
+
+    <script src="./module-05/task-01.js" type="module"></script>
+    <script src="./module-05/task-02.js" type="module"></script>
+    <script src="./module-05/task-03.js" type="module"></script>
+    <script src="./module-05/task-04.js" type="module"></script>
+    <script src="./module-05/task-05.js" type="module"></script>
 
 </body>
 
