--- a/index.html
+++ b/index.html
@@ -37,11 +37,23 @@
     <!-- <script src="./module-04/task-01.js" type="module"></script>
     <script src="./module-04/task-02.js" type="module"></script> -->
 
-    <script src="./module-05/task-01.js" type="module"></script>
+    <!-- <script src="./module-05/task-01.js" type="module"></script>
     <script src="./module-05/task-02.js" type="module"></script>
     <script src="./module-05/task-03.js" type="module"></script>
     <script src="./module-05/task-04.js" type="module"></script>
-    <script src="./module-05/task-05.js" type="module"></script>
+    <script src="./module-05/task-05.js" type="module"></script> -->
+    <!-- <script src="./module-05/task-06.js" type="module"></script> -->
+
+    <script src="./module-06/task-01.js" type="module"></script>
+    <script src="./module-06/task-02.js" type="module"></script>
+    <script src="./module-06/task-03.js" type="module"></script>
+    <script src="./module-06/task-04.js" type="module"></script>
+    <script src="./module-06/task-05.js" type="module"></script>
+    <script src="./module-06/task-06.js" type="module"></script>
+    <script src="./module-06/task-07.js" type="module"></script>
+    <script src="./module-06/task-08.js" type="module"></script>
+    <script src="./module-06/task-09.js" type="module"></script>
+    <script src="./module-06/task-10.js" type="module"></script>
 
 </body>
 
