--- a/index.html
+++ b/index.html
@@ -6,54 +6,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="#">
+    <link rel="stylesheet" href="./module-07/styles/style-t3.css">
+    <link rel="stylesheet" href="./module-07/styles/style-t6.css">
     <title>Document</title>
 </head>
 
 <body>
-    <h1>hello js</h1>
+    <ul id="categories">
+        <li class="item">
+            <h2>Животные</h2>
 
-    <!-- <script src="./module-01/task-01.js" type="module"></script>
-    <script src="./module-01/task-01.js" type="module"></script>
-    <script src="./module-01/task-02.js" type="module"></script>
-    <script src="./module-01/task-03.js" type="module"></script>
-    <script src="./module-01/task-04.js" type="module"></script>
-    <script src="./module-01/task-05.js" type="module"></script>
-    <script src="./module-01/task-06.js" type="module"></script> -->
+            <ul>
+                <li>Кот</li>
+                <li>Хомяк</li>
+                <li>Лошадь</li>
+                <li>Попугай</li>
+            </ul>
+        </li>
+        <li class="item">
+            <h2>Продукты</h2>
 
-    <!-- <script src="./module-02/task-01.js" type="module"></script>
-    <script src="./module-02/task-02.js" type="module"></script>
-    <script src="./module-02/task-03.js" type="module"></script>
-    <script src="./module-02/task-04.js" type="module"></script>
-    <script src="./module-02/task-05.js" type="module"></script>
-    <script src="./module-02/task-06.js" type="module"></script> -->
+            <ul>
+                <li>Хлеб</li>
+                <li>Петрушка</li>
+                <li>Творог</li>
+            </ul>
+        </li>
+        <li class="item">
+            <h2>Технологии</h2>
 
-    <!-- <script src="./module-03/task-01.js" type="module"></script>
-    <script src="./module-03/task-02.js" type="module"></script>
-    <script src="./module-03/task-03.js" type="module"></script>
-    <script src="./module-03/task-04.js" type="module"></script>
-    <script src="./module-03/task-05.js" type="module"></script>
-    <script src="./module-03/task-06.js" type="module"></script> -->
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>React</li>
+                <li>Node</li>
+            </ul>
+        </li>
+    </ul>
 
-    <!-- <script src="./module-04/task-01.js" type="module"></script>
-    <script src="./module-04/task-02.js" type="module"></script> -->
+    <ul id="ingredients"></ul>
 
-    <!-- <script src="./module-05/task-01.js" type="module"></script>
-    <script src="./module-05/task-02.js" type="module"></script>
-    <script src="./module-05/task-03.js" type="module"></script>
-    <script src="./module-05/task-04.js" type="module"></script>
-    <script src="./module-05/task-05.js" type="module"></script> -->
-    <!-- <script src="./module-05/task-06.js" type="module"></script> -->
+    <ul id="gallery"></ul>
 
-    <script src="./module-06/task-01.js" type="module"></script>
-    <script src="./module-06/task-02.js" type="module"></script>
-    <script src="./module-06/task-03.js" type="module"></script>
-    <script src="./module-06/task-04.js" type="module"></script>
-    <script src="./module-06/task-05.js" type="module"></script>
-    <script src="./module-06/task-06.js" type="module"></script>
-    <script src="./module-06/task-07.js" type="module"></script>
-    <script src="./module-06/task-08.js" type="module"></script>
-    <script src="./module-06/task-09.js" type="module"></script>
-    <script src="./module-06/task-10.js" type="module"></script>
+    <div id="counter">
+        <button type="button" data-action="decrement">-1</button>
+        <span id="value">8</span>
+        <button type="button" data-action="increment">+1</button>
+    </div>
+    <br />
+    <input type="text" placeholder="Ваше имя?" id="name-input" />
+    <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
+
+    <input type="text" id="validation-input" data-length="6" placeholder="Введи 6 символов" />
+    <br /> <br />
+    <input id="font-size-control" type="range" />
+    <br />
+    <span id="text">Абракадабра!</span>
+
+    <script src="./module-07/task-01.js" type="module"></script>
+    <script src="./module-07/task-02.js" type="module"></script>
+    <script src="./module-07/task-03.js" type="module"></script>
+    <script src="./module-07/task-04.js" type="module"></script>
+    <script src="./module-07/task-05.js" type="module"></script>
+    <script src="./module-07/task-06.js" type="module"></script>
+    <script src="./module-07/task-07.js" type="module"></script>
 
 </body>
 
