--- a/index.html
+++ b/index.html
@@ -6,72 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="#">
-    <link rel="stylesheet" href="./module-07/styles/style-t3.css">
-    <link rel="stylesheet" href="./module-07/styles/style-t6.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./module-08/styles.css">
+    <title>module-08</title>
 </head>
 
 <body>
-    <ul id="categories">
-        <li class="item">
-            <h2>Животные</h2>
+    <!-- В этот список добавляй элементы галереи -->
+    <ul class="gallery js-gallery"></ul>
 
-            <ul>
-                <li>Кот</li>
-                <li>Хомяк</li>
-                <li>Лошадь</li>
-                <li>Попугай</li>
-            </ul>
-        </li>
-        <li class="item">
-            <h2>Продукты</h2>
+    <!--
+     Модальное окно для полноразмерного изображения
+     Для того чтобы открыть, необходимо добавить на div.lightbox CSS-класс is-open
+   -->
+    <div class="lightbox js-lightbox">
+        <div class="lightbox__overlay"></div>
 
-            <ul>
-                <li>Хлеб</li>
-                <li>Петрушка</li>
-                <li>Творог</li>
-            </ul>
-        </li>
-        <li class="item">
-            <h2>Технологии</h2>
+        <div class="lightbox__content">
+            <img class="lightbox__image" src="" alt="" />
+        </div>
 
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>React</li>
-                <li>Node</li>
-            </ul>
-        </li>
-    </ul>
-
-    <ul id="ingredients"></ul>
-
-    <ul id="gallery"></ul>
-
-    <div id="counter">
-        <button type="button" data-action="decrement">-1</button>
-        <span id="value">8</span>
-        <button type="button" data-action="increment">+1</button>
+        <button type="button" class="lightbox__button" data-action="close-lightbox"></button>
     </div>
-    <br />
-    <input type="text" placeholder="Ваше имя?" id="name-input" />
-    <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
 
-    <input type="text" id="validation-input" data-length="6" placeholder="Введи 6 символов" />
-    <br /> <br />
-    <input id="font-size-control" type="range" />
-    <br />
-    <span id="text">Абракадабра!</span>
 
-    <script src="./module-07/task-01.js" type="module"></script>
-    <script src="./module-07/task-02.js" type="module"></script>
-    <script src="./module-07/task-03.js" type="module"></script>
-    <script src="./module-07/task-04.js" type="module"></script>
-    <script src="./module-07/task-05.js" type="module"></script>
-    <script src="./module-07/task-06.js" type="module"></script>
-    <script src="./module-07/task-07.js" type="module"></script>
-
+    <script src="./module-08/create.js" type="module"></script>
+    <script src="./module-08/events.js" type="module"></script>
+    <!-- <script src="./module-08/items.js" type="module"></script> -->
 </body>
 
 </html>
